# OpenGLPlayground

./: CMakeLists.txt
assets/shaders/: FlatColor.glsl
src/: Camera.h  Shader.cpp  Shader.h  main.cpp
utils/: NameUtils.cpp  NameUtils.h
